reading field values work add

--- a/index.html
+++ b/index.html
@@ -8,6 +8,14 @@
 </head>
 
 <body>
+
+    <!-- <input type="text" name="" id="inp">
+    <button onclick="readInp()">Click Here</button> -->
+
+    <!-- <input type="text" name="" id="input">
+    <button onclick="setValue()">Set Value</button> -->
+
+
     <div class="main">
         <div>
             <h1> Calculator </h1>
